--- a/index.html
+++ b/index.html
@@ -31,11 +31,23 @@
 				</div>
 				<div class="clear"></div>
 			</section>
-			<section class='sec2'>
-
+			<section class="sec2">
+				<div class="text3">
+					<h2> The Size</h2>
+						<p>Canis dirus was the largest of all Canis species. A study of the length and circumference of femur bones estimated the mean body mass of Canis dirus guildayi to be 60 kg (130 lb) and Canis dirus dirus to be 68 kg (150 lb).[18] Another study proposed that the increased stress caused in the humerus when running at maximum speed may have imposed a biomechanical upper limit on the body mass for Canis dirus dirus to be 110 kg (240 lbs).</p>
+				</div>
+				<div class="pic2">
+					<img src="img/canis-skeleton.jpg">
+				<div class="text4">
+					<h2>Habitat</h2>
+						<p>Canis dirus remains have been found across a broad range of habitats including the plains, grasslands and some forested mountain areas of North America, and in the arid savannah of South America. The sites range in elevation from sea level to 2,255 m (7400 feet).[17] The location of its fossil remains suggests that it lived predominantly in the open lowlands along with its prey the large herbivores.</p>
+				</div>		
+				<div class="clear"></div>
 
 			<footer>
-
+				<div class="footer">
+					<h3>Ian The Johnson</h3>
+				</div>	
 			</footer>
 
 	<script src="scripts/main.js"></script>
